test/error/OpAddVoid.fu
public static class Test
{
	static void Foo()
	{
	}

	public static bool Run()
	{
		int i = 5 + Foo(); //ERROR: Cannot convert 'void' to 'int'
		return true;
	}
}
